build changes for easier deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-serve",
+    "start": "webpack-serve --config ./webpack.config.js --content static/",
     "build:release": "webpack --mode production",
     "build:debug": "webpack --mode development"
   },
@@ -16,6 +16,7 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^8.0.0-beta.2",
     "babel-polyfill": "^6.26.0",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
