--- a/package.json
+++ b/package.json
@@ -4,29 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-serve --config ./webpack.config.js --content static/",
+    "start": "webpack serve",
     "build:release": "webpack --mode production",
     "build:debug": "webpack --mode development"
   },
   "author": "Andrew Smith",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.47",
-    "@babel/preset-env": "^7.0.0-beta.47",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^8.0.0-beta.2",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.3",
     "babel-polyfill": "^6.26.0",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^3.1.0",
-    "webpack-serve": "^2.0.2"
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "phaser": "^3.11.0",
-    "springroll": "git+https://github.com/SpringRoll/SpringRoll.git#v2"
+    "phaser": "^3.80.1",
+    "springroll": "git+https://github.com/SpringRoll/SpringRoll.git",
+    "webpack-dev-server": "^5.0.4"
   }
 }
